add fields to devise

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,70 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="card">
+  <div class="card-header">
+    <h4>Edit Profile<% resource_name.to_s.humanize %></h4>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+  <div class="card-body">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="form-select form-select-sm" aria-label=".form-select-sm example">
+        <%= f.label :Role %><br />
+        <%= f.select :role, [["Instructor", "instructor"], ["Student", "student"]], {}, {class: "form-control"} %>
+      </div>
+      <% if current_user %>
+        <div class="well well-sm">
+          Instructor: <strong><%= current_user.instructor? %></strong><br>
+          <%= link_to 'Toggle admin rights', user_session_path(current_user), method: :patch, class: 'btn btn-info' %>
+        </div>
+      <% end %>
+      <div class="field mb-3">
+        <%= f.label :"First Name" %><br />
+        <%= f.text_field :first_name, class:"form-control", placeholder:"First Name", autofocus: false %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :"Last Name" %><br />
+        <%= f.text_field :last_name, class:"form-control", placeholder:"Last Name", autofocus: false %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :"Citizen ID" %><br />
+        <%= f.text_field :citizen_id, class:"form-control", placeholder:"Citizen ID", autofocus: false %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, class:"form-control", placeholder:"Email", autofocus: true, autocomplete: "email" %>
+      </div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+      <div class="field mb-3">
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, class:"form-control", placeholder:"Password", autocomplete: "new-password" %>
+        <% if @minimum_password_length %>
+          <br />
+          <em><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, class:"form-control", placeholder:"Password", autocomplete: "new-password" %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, class:"form-control", placeholder:"Current Password", autocomplete: "current-password" %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Update", class:'btn btn-secondary' %>
+      </div>
     <% end %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
+<br/>
+<br/>
+<div class="card">
+  <h5 class="card-header">Cancel my account</h5>
+  <div class="card-body">
+    <p class="card-text">Unhappy?</p>
+    <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:'btn btn-danger' %></p>
+</div>
+</div>
+<br/>
 <%= link_to "Back", :back %>
