--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,47 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="card" style="width:40% ; margin:0 auto">
+  <div class="card-header">
+    <h4>Sign up</h4>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="card-body">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="form-select form-select-sm">
+        <%= f.label :Role %><br />
+        <%= f.select :role, [["Instructor", "instructor"], ["Student", "student"]], {}, {class: "form-control"} %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :"First Name" %><br />
+        <%= f.text_field :first_name, class:"form-control", placeholder:"First Name", autofocus: false %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :"Last Name" %><br />
+        <%= f.text_field :last_name, class:"form-control", placeholder:"Last Name", autofocus: false %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :"Citizen ID" %><br />
+        <%= f.text_field :citizen_id, class:"form-control", placeholder:"Citizen ID", autofocus: false %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :email %>
+        <%= f.email_field :email, class:"form-control", placeholder:"Email", autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        <%= f.password_field :password, class:"form-control", placeholder:"Password", autocomplete: "new-password" %>
+      </div>
+      <div class="field mb-3">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, class:"form-control", placeholder:"Password Confirmation", autocomplete: "new-password" %>
+      </div>
+      
+      <div class="actions">
+        <%= f.submit "Sign up", class:'btn btn-secondary' %>
+      </div>
+    <% end %>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+<br/>
