--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
       <% if current_user %>
         <div class="well well-sm">
           Instructor: <strong><%= current_user.instructor? %></strong><br>
-          <%= link_to 'Toggle admin rights', user_session_path(current_user), method: :patch, class: 'btn btn-info' %>
+          <%= link_to 'Toggle Instructor Rights', user_path(current_user), method: :patch, class: 'btn btn-info' %>
         </div>
       <% end %>
       <div class="field mb-3">
