--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,22 +1,28 @@
-<%= form_with(model: group) do |form| %>
-  <% if group.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
-
-      <ul>
-        <% group.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :group_name %>
-    <%= form.text_field :group_name %>
+<div class="card w-50">
+  <div class="card-body">
+    <%= form_with(model: group) do |form| %>
+      <% if group.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
+    
+          <ul>
+            <% group.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+    
+      <div class="field mb-3">
+        <%= form.label :group_name %>
+        <%= form.text_field :group_name, class:"form-control", placeholder:"Group Name" %>
+      </div>
+    
+      <div class="actions">
+        <%= form.submit %>
+      </div>
+    <% end %>
+    
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
+<br>
