--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container" style="justify-content: center">
+<h1>Welcome!</h1>
+<br>
+<%=image_tag("image1.jpg", alt: "Example Image" , :height => "75%", :width => "75%") %>
+</div>
 
