--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
-  <div class="row row-cols-auto">
+  <div class="row row-cols-auto align-items-center">
     <div class="col">
       <h2>Courses</h2>
     </div>
@@ -10,9 +10,10 @@
   </div>
 </div>
 <br>
-<div class="container">
+<div class="container" style="display:flex;
+flex-flow:row wrap; justify-content:left;">
     <% @courses.each do |course| %>
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; margin-right: 20px; margin-bottom: 20px;">
         <div class="card-body">
           <h5 class="card-title"><%= course.course_name %></h5>
           <strong>owned by user_id: <%= course.user_id %></strong>
