--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Group</h1>
+<h2>Editing Group</h2>
 
 <%= render 'form', group: @group %>
 
-<%= link_to 'Show', @group %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Show', @group, class:"btn btn-secondary btn-sm"%> |
+<%= link_to 'Back', groups_path, class:"btn btn-primary btn-sm" %>
