--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="container">
+<div class="container justify-content:center;">
   <div class="row row-cols-auto align-items-center">
     <div class="col">
       <h2>Groups</h2>
@@ -8,11 +8,12 @@
       <%= link_to '+', new_group_path, class:'btn btn-outline-primary' %>
     </div>
   </div>
-</div>
+
 <br>
-<div class="container">
+<div class="container" style="display:flex;
+flex-flow:row wrap; justify-content:left;">
 <% @groups.each do |group| %>
-<div class="card border-dark mb-3" style="max-width: 18rem;">
+<div class="card border-dark mb-3" style="max-width: 18rem; margin-right:20px;">
   <div class="card-header">Group</div>
   <div class="card-body">
     <h5 class="card-title"><%= group.group_name %></h5>
@@ -23,4 +24,5 @@
   </div>
 </div>
 <% end %>
+</div>
 </div>
