--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,9 +1,12 @@
 <p id="notice"><%= notice %></p>
-
+<div class="card w-50">
+  <div class="card-body">
 <p>
   <strong>Group name:</strong>
   <%= @group.group_name %>
 </p>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Edit', edit_group_path(@group), class:"btn btn-secondary btn-sm" %> |
+<%= link_to 'Back', groups_path, class:"btn btn-primary btn-sm" %>
+</div>
+</div>
