--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to 'Online Course', root_path, class:"navbar-brand" %>
+      <%= link_to 'Online Course', root_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,13 +8,19 @@
       <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item">
-            <%= link_to 'All Course', courses_path, class:"nav-link" %>
-          </li>
-        <li class="nav-item">
-          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class:"nav-link" %>
+            <%= link_to 'Course', courses_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
+            <%= link_to 'Student List', users_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+            <%= link_to 'Group', groups_path, class:"nav-link" %>
+          </li>
+        <li class="nav-item">
           <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class:"nav-link", :style => "color:#e32222" %>
         </li>
       <% else %>
         <li class="nav-item">
