--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -14,8 +14,8 @@
   <% end %>
 
   <div class="field mb-3">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, class:"form-control", placeholder:"User ID" %>
+    <%= form.label :user_id, "User ID" %>
+    <%= form.text_field :user_id, value: current_user.id, class:"form-control", :disabled => true%>
   </div>
 
   <div class="field mb-3">
