--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,9 @@
       <h2>Groups</h2>
     </div>
     <div class="col">
-      <%= link_to '+', new_group_path, class:'btn btn-outline-primary' %>
+      <% if current_user.instructor? %>
+        <%= link_to '+', new_group_path, class:'btn btn-outline-primary' %>
+        <% end %>
     </div>
   </div>
 
@@ -13,14 +15,18 @@
 <div class="container" style="display:flex;
 flex-flow:row wrap; justify-content:left;">
 <% @groups.each do |group| %>
-<div class="card border-dark mb-3" style="max-width: 18rem; margin-right:20px;">
+<div class="card border-dark mb-3" style="width: 18rem; margin-right:20px;">
   <div class="card-header">Group</div>
   <div class="card-body">
     <h5 class="card-title"><%= group.group_name %></h5>
     <p class="card-text"> </p>
     <%= link_to 'Show', group, class:"btn btn-outline-secondary btn-sm" %>
-    <%= link_to 'Edit', edit_group_path(group), class:"btn btn-outline-secondary btn-sm" %>
-    <%= link_to 'Delete', group, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger btn-sm" %>
+    <% if policy(group).update? %>
+      <%= link_to 'Edit', edit_group_path(group), class:"btn btn-outline-secondary btn-sm" %>
+    <% end %>
+    <% if policy(group).destroy? %>
+      <%= link_to 'Delete', group, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger btn-sm" %>
+    <% end %>
   </div>
 </div>
 <% end %>
