--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,7 +6,9 @@
       <%= @group.group_name %>
     </p>
 
-    <%= link_to 'Edit', edit_group_path(@group), class:"btn btn-secondary btn-sm" %> |
+    <% if policy(@group).update? %>
+      <%= link_to 'Edit', edit_group_path(@group), class:"btn btn-secondary btn-sm" %> |
+    <% end %>
     <%= link_to 'Back', groups_path, class:"btn btn-primary btn-sm" %>
   </div>
 </div>
